Replace "endpoint" with "operation"
Replaced almost all instances of "endpoint" with "operation". Some instances seem to be related to backend code, so I avoided changing those.

--- a/docs/changelog-archived/v0.8.0.md
+++ b/docs/changelog-archived/v0.8.0.md
@@ -66,7 +66,7 @@ Changes
 
 #### PATH _`/devices/{serial}/switchPortStatuses/packets`_
 
-> New Endpoint  
+> New Operation  
 > 
 > ### Return the packet counters for all the ports of a switch
 > 
@@ -130,7 +130,7 @@ Changes
 
 #### PATH _`/networks/{networkId}/switch/settings/multicast`_
 
-> New Endpoint  
+> New Operation  
 > 
 > ### Return Multicast settings for a network
 > 
@@ -202,7 +202,7 @@ Changes
 
 #### PATH _`/organizations/{organizationId}/insight/monitoredMediaServers`_
 
-> New Endpoint  
+> New Operation  
 > 
 > ### List the monitored media servers for this organization. 
 > Only valid for organizations with Meraki Insight.
@@ -234,7 +234,7 @@ Changes
 
 #### PATH _`/organizations/{organizationId}/insight/monitoredMediaServers/{monitoredMediaServerId}`_
 
-> New Endpoint  
+> New Operation  
 > 
 > ### Return a monitored media server for this organization. 
 > Only valid for organizations with Meraki Insight.
