--- a/docs/changelog-archived/v0.7.0.md
+++ b/docs/changelog-archived/v0.7.0.md
@@ -134,7 +134,7 @@ Changes
 
 #### PATH _`/devices/{serial}/camera/qualityAndRetentionSettings`_
 
-> New Endpoint  
+> New Operation  
 > 
 > ### Returns quality and retention settings for the given camera
 > 
@@ -168,7 +168,7 @@ Changes
 
 #### PATH _`/networks/{networkId}/camera/schedules`_
 
-> New Endpoint  
+> New Operation  
 > 
 > ### Returns a list of all camera recording schedules.
 > 
@@ -191,7 +191,7 @@ Changes
 
 #### PATH _`/devices/{serial}/cellularGateway/settings`_
 
-> New Endpoint  
+> New Operation  
 > 
 > ### Show the LAN Settings of a MG
 > 
@@ -259,7 +259,7 @@ Changes
 
 #### PATH _`/devices/{serial}/cellularGateway/settings/portForwardingRules`_
 
-> New Endpoint  
+> New Operation  
 > 
 > ### Returns the port forwarding rules for a single MG.
 > 
@@ -331,7 +331,7 @@ Changes
 
 #### PATH _`/devices/{serial}/switchPortStatuses`_
 
-> New Endpoint  
+> New Operation  
 > 
 > ### Return the status for all the ports of a switch
 > 
@@ -390,7 +390,7 @@ Changes
 
 #### PATH _`/networks/{networkId}/appliance/firewall/inboundFirewallRules`_
 
-> New Endpoint  
+> New Operation  
 > 
 > ### Return the inbound firewall rules for an MX network
 > 
@@ -440,7 +440,7 @@ Changes
 
 #### PATH _`/networks/{networkId}/camera/qualityRetentionProfiles`_
 
-> New Endpoint  
+> New Operation  
 > 
 > ### List the quality retention profiles for this network
 > 
@@ -518,7 +518,7 @@ Changes
 
 #### PATH _`/networks/{networkId}/camera/qualityRetentionProfiles/{qualityRetentionProfileId}`_
 
-> New Endpoint  
+> New Operation  
 > 
 > ### Retrieve a single quality retention profile
 > 
@@ -602,7 +602,7 @@ Changes
 
 #### PATH _`/networks/{networkId}/cellularGateway/settings/connectivityMonitoringDestinations`_
 
-> New Endpoint  
+> New Operation  
 > 
 > ### Return the connectivity testing destinations for an MG network
 > 
@@ -660,7 +660,7 @@ Changes
 
 #### PATH _`/networks/{networkId}/cellularGateway/settings/dhcp`_
 
-> New Endpoint  
+> New Operation  
 > 
 > ### List common DHCP settings of MGs
 > 
@@ -696,7 +696,7 @@ Changes
 
 #### PATH _`/networks/{networkId}/cellularGateway/settings/subnetPool`_
 
-> New Endpoint  
+> New Operation  
 > 
 > ### Return the subnet pool and mask configured for MGs in the network.
 > 
@@ -752,7 +752,7 @@ Changes
 
 #### PATH _`/networks/{networkId}/cellularGateway/settings/uplink`_
 
-> New Endpoint  
+> New Operation  
 > 
 > ### Returns the uplink settings for your MG network.
 > 
@@ -784,7 +784,7 @@ Changes
 
 #### PATH _`/networks/{networkId}/switch/linkAggregations`_
 
-> New Endpoint  
+> New Operation  
 > 
 > ### List link aggregation groups
 > 
@@ -878,7 +878,7 @@ Changes
 
 #### PATH _`/networks/{networkId}/switch/linkAggregations/{linkAggregationId}`_
 
-> New Endpoint  
+> New Operation  
 > 
 > ### Update a link aggregation group
 > 
