--- a/docs/changelog-archived/v1.0.0-beta.0-changelog.md
+++ b/docs/changelog-archived/v1.0.0-beta.0-changelog.md
@@ -476,7 +476,7 @@ POST _`/networks/{networkId}/devices/claim`_
 
 GET _`/networks/{networkId}/firewalledServices/{service}`_
 
-> \- Deleted Endpoint
+> \- Deleted Operation
 
 * * *
 
@@ -484,13 +484,13 @@ GET _`/networks/{networkId}/firewalledServices/{service}`_
 
 PUT _`/networks/{networkId}/sm/devices/checkin`_
 
-> \- Deleted Endpoint
+> \- Deleted Operation
 
 * * *
 
 PUT _`/networks/{networkId}/sm/devices/move`_
 
-> \- Deleted Endpoint
+> \- Deleted Operation
 
 * * *
 
